0026551: Optimization of initialization of OCCT RTTI

Global instances of type descriptors are eliminated as unnecessary